--- a/Styles.css
+++ b/Styles.css
@@ -1,6 +1,7 @@
 /* styles.css */
 body {
-  background-color: #D9EAD3;
+  /*background-color: #D9EAD3;*/
+  background: linear-gradient(180deg, #E6F9EA 0%, #F0FAF2 100%);
   color: #0b1220;
   font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   margin: 0;
